--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,48 +1,3 @@
-:root {
-  --main-color: #303233;
-  --red: #802023;
-}
-
-html {
-  box-sizing: border-box;
-  height: 100%;
-  -webkit-tap-highlight-color: transparent;
-  font-family: Segoe UI, SegoeUI, Helvetica Neue, Helvetica, Arial, sans-serif;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-/* The emerging W3C standard
-   that is currently Firefox-only */
-* {
-  scrollbar-width: thin;
-  scrollbar-color: var(--red) var(--main-color);
-}
-
-/* Works on Chrome/Edge/Safari */
-*::-webkit-scrollbar {
-  width: 8px;
-}
-*::-webkit-scrollbar-track {
-  background: var(--main-color);
-}
-*::-webkit-scrollbar-thumb {
-  background-color: var(--red);
-  border-radius: 20px;
-  border: 3px solid var(--red);
-}
-
-body {
-  margin: 0px;
-  padding: 10px;
-  height: 100%;
-  background: var(--main-color);
-}
-
 p {
   /* text-align: center; */
   margin: 0;
@@ -217,8 +172,8 @@ figure {
 }
 
 .Content__Video-Wrapper {
-  // margin-top: 20px;
-  // margin-bottom: 20px;
+  /* margin-top: 20px; */
+  /* margin-bottom: 20px; */
   display: grid;
   grid-auto-flow: column;
   width: 80%;
@@ -247,7 +202,7 @@ figure {
   height: 100%;
 }
 
-// TESTETSTESTETSTETS -------------------
+/* TESTETSTESTETSTETS ------------------- */
 
 .Video-Context {
   position: absolute;
@@ -262,15 +217,15 @@ figure {
   transition: all 0.5s;
 }
 
-.Content__Video-Thumbnail-Wrapper {
-  &:hover {
-    .Video-Context {
-      color: #ff0000;
+/* .Content__Video-Thumbnail-Wrapper {
+   &:hover {
+     .Video-Context {
+     color: #ff0000;
     }
-  }
+   }
   &:focus {
-    .Video-Context {
-      color: #ff0000;
-    }
+   .Video-Context {
+     color: #ff0000;
+     }
   }
-}
+} */
